# api-challenge-backend-sanaap

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  manage.py  nginx.conf  pyproject.toml  task
apps/audit/: __init__.py  admin.py  apps.py  models.py  signals.py
apps/audit/migrations/: 0001_initial.py  0002_auditlog_delete_auditentry.py  0003_remove_auditlog_document_id_remove_auditlog_metadata_and_more.py
apps/documents/: admin.py  models.py  tasks.py  tests.py
apps/documents/api/: permissions.py  serializers.py  urls.py  views.py
apps/documents/migrations/: 0001_initial.py
apps/documents/models/: __init__.py  document.py  idempotency.py  version.py
apps/documents/selectors/: document_selectors.py
apps/documents/services/: document_service.py
apps/users/: admin.py  api.py  models.py  permissions.py  signals.py  tests.py  urls.py
apps/users/migrations/: 0001_initial.py
apps/users/models/: __init__.py  user.py
config/: celery.py  settings.py  urls.py
config/settings/: base.py  prod.py
config/settings/components/: cache.py  database.py  drf.py  storage.py
core/commons/: auth.py
core/commons/pagination/: custom_pagination.py
core/commons/utils/: cache_utils.py
